discover tailwind classes

--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intro to Tailwind CSS</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <header></header>
-    <main></main>
+    <main>
+        <section>
+            <h1>In the name of Allah, </h1>
+            <h2>Explore Tailwind</h2>
+        </section>
+        <section>
+            <h1 class="text-5xl">This is a large text.</h1>
+            <p>Normal text</p>
+            <p class="font-bold">Normal bold text</p>
+            <p class="text-green-500">Green text</p>
+            <p class="text-right">Text right</p>
+            <p class="text-center bg-orange-700">Text center</p>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
