--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header></header>
     <main>
         <section>
-            <h1>In the name of Allah, </h1>
+            <h1 class="text-7xl">In the name of Allah, </h1>
             <h2>Explore Tailwind</h2>
         </section>
         <section>
@@ -20,6 +20,7 @@
             <p class="text-green-500">Green text</p>
             <p class="text-right">Text right</p>
             <p class="text-center bg-orange-700">Text center</p>
+            <p class="border border-lime-500 mt-12 text-center">Exploring Tailwind Border</p>
         </section>
     </main>
     <footer></footer>
