added tailwind width, height, margin, and padding example

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
             <p class="text-center bg-orange-700">Text center</p>
             <p class="border border-lime-500 mt-12 text-center">Exploring Tailwind Border</p>
         </section>
+        <section class="w-44 h-44 overflow-scroll border mt-12 mx-auto border-4 border-green-500 p-5">
+            <h3>About us</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste iusto veritatis minus nam sapiente illum atque amet non ullam aut.</p>
+        </section>
+        <section class="space-y-5 my-12">
+            <div class="border h-44 w-44 border-lime-600 border-4 mx-auto"></div>
+            <div class="border h-44 w-44 border-lime-600 border-4 mx-auto"></div>
+            <div class="border h-44 w-44 border-lime-600 border-4 mx-auto"></div>
+        </section>
     </main>
     <footer></footer>
 </body>
