added tailwind responsive example

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
             <div class="border h-44 w-44 border-lime-600 border-4 mx-auto"></div>
             <div class="border h-44 w-44 border-lime-600 border-4 mx-auto"></div>
         </section>
+        <hr>
+        <section class="my-12 p-5 sm:bg-slate-300 md:bg-slate-400 lg:bg-slate-500">
+            <h3>My Responsiveness</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad ducimus earum odio tenetur facilis itaque maxime architecto amet voluptate libero!</p>
+        </section>
     </main>
     <footer></footer>
 </body>
