--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
             <h3>My Responsiveness</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad ducimus earum odio tenetur facilis itaque maxime architecto amet voluptate libero!</p>
         </section>
+        <hr>
+        <section class="">
+            <h3 class="text-3xl my-9">My Flexible Flex</h3>
+            <div class="md:flex md:justify-between h-40 border-2 border-lime-500 items-center">
+                <div class="text-2xl border border-4 border-lime-400 h-20 w-24">Item 1</div>
+                <div class="text-2xl border border-4 border-lime-400 h-20 w-24">Item 2</div>
+                <div class="text-2xl border border-4 border-lime-400 h-20 w-24">Item 3</div>
+                <div class="text-2xl border border-4 border-lime-400 h-20 w-24">Item 4</div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
