addedtailwind grid layout and grid responsive example

--- a/index.html
+++ b/index.html
@@ -39,11 +39,41 @@
         <hr>
         <section class="">
             <h3 class="text-3xl my-9">My Flexible Flex</h3>
-            <div class="md:flex md:justify-between h-40 border-2 border-lime-500 items-center">
+            <div class="md:flex md:justify-between h-40 border-2 border-lime-500 items-center overflow-scroll">
                 <div class="text-2xl border border-4 border-lime-400 h-20 w-24">Item 1</div>
                 <div class="text-2xl border border-4 border-lime-400 h-20 w-24">Item 2</div>
                 <div class="text-2xl border border-4 border-lime-400 h-20 w-24">Item 3</div>
                 <div class="text-2xl border border-4 border-lime-400 h-20 w-24">Item 4</div>
+            </div>
+        </section>
+        <hr>
+        <section>
+            <h3>Explore Tailwind Grid</h3>
+            <div class="grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+                <div class="bg-green-500 border border-2 border-md">Box 1</div>
+                <div class="bg-green-500 border border-2 border-md">Box 2</div>
+                <div class="bg-green-500 border border-2 border-md">Box 3</div>
+                <div class="bg-green-500 border border-2 border-md">Box 4</div>
+                <div class="bg-green-500 border border-2 border-md ">Box 5</div>
+                <div class="bg-green-500 border border-2 border-md md:col-span-2 md:row-span-4">Box 6</div>
+                <div class="bg-green-500 border border-2 border-md">Box 7</div>
+                <div class="bg-green-500 border border-2 border-md">Box 8</div>
+                <div class="bg-green-500 border border-2 border-md">Box 9</div>
+                <div class="bg-green-500 border border-2 border-md">Box 10</div>
+                <div class="bg-green-500 border border-2 border-md">Box 11</div>
+                <div class="bg-green-500 border border-2 border-md">Box 12</div>
+                <div class="bg-green-500 border border-2 border-md">Box 13</div>
+                <div class="bg-green-500 border border-2 border-md">Box 14</div>
+                <div class="bg-green-500 border border-2 border-md">Box 15</div>
+                <div class="bg-green-500 border border-2 border-md">Box 16</div>
+                <div class="bg-green-500 border border-2 border-md">Box 17</div>
+                <div class="bg-green-500 border border-2 border-md">Box 18</div>
+                <div class="bg-green-500 border border-2 border-md">Box 19</div>
+                <div class="bg-green-500 border border-2 border-md">Box 20</div>
+                <div class="bg-green-500 border border-2 border-md md:col-span-3">Box 21</div>
+                <div class="bg-green-500 border border-2 border-md">Box 22</div>
+                <div class="bg-green-500 border border-2 border-md">Box 23</div>
+                <div class="bg-green-500 border border-2 border-md">Box 24</div>
             </div>
         </section>
     </main>
